--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,9 @@
     .title_xiaomi-redmi-buds-17_01 {font-size: 1rem; color: var(--tittle); text-align: left; margin-top: 0.5rem; padding-left: 0.5rem; padding-right: 1rem;}
 
     .title_xiaomi-redmi-buds-18_01 {font-size: 0.9rem; color: var(--tittle); text-align: left; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-18_02 {font-size: 0.9rem; color: var(--tittle-gray); text-align: left;  padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
+    .title_xiaomi-redmi-buds-18_02 {font-size: 0.9rem; color: var(--tittle-gray); text-align: left;  padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
+    
+    .title_xiaomi-redmi-buds-19_02 {font-size: 0.7rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
 
     /*==================================================== GRID ========================================================*/
 
