Adjusting line-height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,59 +44,59 @@
 
     .title_xiaomi-redmi-buds-01 {font-size: 0.8rem; color: var(--title); text-align: left; margin: 1rem;}
     .title_xiaomi-redmi-buds-02-1 {font-size: 0.8rem; line-height: 1rem; color: var(--title); text-align: left; margin: 1rem;}
-    .p-xiaomi-redmi-buds-01 {font-size: 0.8rem; line-height: 1.2rem; color: var(--paragraph);}
-    .p-xiaomi-redmi-buds-01-01 {font-size: 0.8rem; line-height: 1.2rem; color: var(--paragraph-gray);}
+    .p-xiaomi-redmi-buds-01 {font-size: 0.8rem; color: var(--paragraph);}
+    .p-xiaomi-redmi-buds-01-01 {font-size: 0.8rem; line-height: 1.5rem; color: var(--paragraph-gray);}
 
     .title_xiaomi-redmi-buds-03 {font-size: 1.9rem; color: var(--paragraph); background: var(--red-gradient); -webkit-background-clip: text; -webkit-text-fill-color: var(--paragraph-01); text-align: left;}
     .title_xiaomi-redmi-buds-03_01 {font-size: 1.8rem; color: var(--tittle); text-align: left; margin-top: 2rem;}
-    .title_xiaomi-redmi-buds-03_02 {font-size: 0.8rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-bottom: 3rem; margin-top: 1rem;} 
+    .title_xiaomi-redmi-buds-03_02 {font-size: 0.8rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-bottom: 3rem; margin-top: 1rem;} 
 
-    .p-title_xiaomi-redmi-buds-04 {font-size: 0.8rem; line-height: 1.2rem; color: var(--tittle-dark-red); text-align: left; margin-left: 4.4rem;}
-    .p-title_xiaomi-redmi-buds-04-01 {font-size: 0.8rem; line-height: 1.2rem; color: var(--tittle-dark-red); text-align: right; margin-right: 5.8rem; margin-top: -2.5rem; margin-bottom: 0.7rem;}  
+    .p-title_xiaomi-redmi-buds-04 {font-size: 0.8rem; line-height: 1.5rem; color: var(--tittle-dark-red); text-align: left; margin-left: 4.4rem;}
+    .p-title_xiaomi-redmi-buds-04-01 {font-size: 0.8rem; line-height: 1.5rem; color: var(--tittle-dark-red); text-align: right; margin-right: 5.8rem; margin-top: -2.5rem; margin-bottom: 0.7rem;}  
     
-    .title_xiaomi-redmi-buds-05 {font-size: 1.9rem; line-height: 1.2rem; color: var(--tittle-dark-red); text-align: left;}
+    .title_xiaomi-redmi-buds-05 {font-size: 1.9rem; line-height: 1.5rem; color: var(--tittle-dark-red); text-align: left;}
     .title_xiaomi-redmi-buds-05_01 {font-size: 1.8rem; color: var(--tittle); text-align: left; margin-top: 1rem; margin-bottom: 1rem;}
-    .title_xiaomi-redmi-buds-05_02 {font-size: 0.8rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-bottom: 1rem;} 
+    .title_xiaomi-redmi-buds-05_02 {font-size: 0.8rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-bottom: 1rem;} 
 
     .p-title_xiaomi-redmi-buds-06 {font-size: 0.8rem; color: var(--tittle-dark-red); text-align: left; margin-left: 13.5rem;}
     .p-title_xiaomi-redmi-buds-06-01 {font-size: 0.8rem; color: var(--tittle-dark-red); text-align: right; margin-right: 6.5rem; margin-top: -0.5rem; margin-bottom: 15rem;}
     
     .title_xiaomi-redmi-buds-07 {font-size: 1.9rem; color: var(--paragraph); background: var(--green-gradient); -webkit-background-clip: text; -webkit-text-fill-color: var(--paragraph-01); text-align: left;}
     .title_xiaomi-redmi-buds-07_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; margin-top: 2.5rem;}
-    .title_xiaomi-redmi-buds-07_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 0.5rem;} 
+    .title_xiaomi-redmi-buds-07_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem;} 
 
     .title_xiaomi-redmi-buds-08 {font-size: 1.9rem; color: var(--paragraph); background: var(--blue-gradient); -webkit-background-clip: text; -webkit-text-fill-color: var(--paragraph-01); text-align: left; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}
     .title_xiaomi-redmi-buds-08_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-08_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; padding-top: 0.5rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
+    .title_xiaomi-redmi-buds-08_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; padding-top: 0.5rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
 
     .title_xiaomi-redmi-buds-09 {font-size: 1.9rem; color: var(--tittle-blue); text-align: left; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}
     .title_xiaomi-redmi-buds-09_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-09_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; padding-bottom: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-09_03 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 32rem; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}  
+    .title_xiaomi-redmi-buds-09_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; padding-bottom: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
+    .title_xiaomi-redmi-buds-09_03 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 32rem; padding: 1rem; margin-left: 1rem; margin-right: 1rem;}  
 
     .title_xiaomi-redmi-buds-10 {font-size: 1.9rem; color: var(--paragraph); background: var(--green-gradient); -webkit-background-clip: text; -webkit-text-fill-color: var(--paragraph-01); text-align: left; margin: 1rem; padding: 1rem;}
     .title_xiaomi-redmi-buds-10_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-10_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
+    .title_xiaomi-redmi-buds-10_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
 
-    .title_xiaomi-redmi-buds-11_01 {font-size: 1.5rem; line-height: 1.2rem; color: var(--tittle); text-align: left; margin-top: 2rem; }
-    .title_xiaomi-redmi-buds-11_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 0.5rem; }
+    .title_xiaomi-redmi-buds-11_01 {font-size: 1.5rem; line-height: 1.5rem; color: var(--tittle); text-align: left; margin-top: 2rem; }
+    .title_xiaomi-redmi-buds-11_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 0.5rem; }
 
-    .title_xiaomi-redmi-buds-12_01 {font-size: 1.5rem; line-height: 1.2rem; color: var(--tittle); text-align: right; margin-top: 2rem; }
-    .title_xiaomi-redmi-buds-12_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: right; margin-top: 0.5rem; }
+    .title_xiaomi-redmi-buds-12_01 {font-size: 1.5rem; line-height: 1.5rem; color: var(--tittle); text-align: right; margin-top: 2rem; }
+    .title_xiaomi-redmi-buds-12_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: right; margin-top: 0.5rem; }
 
     .title_xiaomi-redmi-buds-13 {font-size: 1.9rem; color: var(--paragraph); background: var(--blue-gradient); -webkit-background-clip: text; -webkit-text-fill-color: var(--paragraph-01); text-align: left;}
     .title_xiaomi-redmi-buds-13_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; margin-top: 2rem;}
-    .title_xiaomi-redmi-buds-13_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem;} 
+    .title_xiaomi-redmi-buds-13_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem;} 
 
-    .p-title_xiaomi-redmi-buds-14 {font-size: 0.8rem; line-height: 1.2rem; color: var(--paragraph-blue); margin-left: 5rem; margin-top: 3rem;}
+    .p-title_xiaomi-redmi-buds-14 {font-size: 0.8rem; line-height: 1.5rem; color: var(--paragraph-blue); margin-left: 5rem; margin-top: 3rem;}
 
     .title_xiaomi-redmi-buds-15_01 {font-size: 1.5rem;color: var(--tittle); text-align: left;}
-    .title_xiaomi-redmi-buds-15_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem;}
+    .title_xiaomi-redmi-buds-15_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem;}
     
     .title_xiaomi-redmi-buds-16_01 {font-size: 1.5rem; color: var(--tittle); text-align: left; margin-top: 0.5rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
-    .title_xiaomi-redmi-buds-16_02 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
+    .title_xiaomi-redmi-buds-16_02 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle-gray); text-align: left; margin-top: 1rem; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;} 
 
-    .title_xiaomi-redmi-buds-17_01 {font-size: 1rem; line-height: 1.2rem; color: var(--tittle); text-align: left; margin-top: 0.5rem; padding-left: 0.5rem; padding-right: 1rem;}
+    .title_xiaomi-redmi-buds-17_01 {font-size: 1rem; line-height: 1.5rem; color: var(--tittle); text-align: left; margin-top: 0.5rem; padding-left: 0.5rem; padding-right: 1rem;}
 
     .title_xiaomi-redmi-buds-18_01 {font-size: 0.8rem; color: var(--tittle); text-align: left; padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
     .title_xiaomi-redmi-buds-18_02 {font-size: 0.8rem; line-height: 1rem; color: var(--tittle-gray); text-align: left;  padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem;}
@@ -636,6 +636,10 @@
     .base_34-01 {
         margin-right: 7rem;
         margin-top: 6rem;
+    }
+
+    .base_35 {
+        margin-bottom: 3rem;
     }
 
 }
